--- a/src/template.html
+++ b/src/template.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <header>
+        <div class="banner">Vesuvio's</div>
         <nav>
             <button id="home">Home</button>
             <button id="menu">Menu</button>
