Added a bunch of CSS, added home functionality.

--- a/src/template.html
+++ b/src/template.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./images/sopranoslogo16x16.png">
     <title>Restaurant Page</title>
 </head>
 <body>
+    <div class="banner">Vesuvio's</div>
     <header>
-        <div class="banner">Vesuvio's</div>
+        
         <nav>
             <button id="home">Home</button>
             <button id="menu">Menu</button>
